--- a/legend/package.json
+++ b/legend/package.json
@@ -20,6 +20,7 @@
     "react": "latest",
     "react-day-picker": "^8.8.2",
     "react-dom": "latest",
+    "react-draggable": "^4.4.6",
     "react-icons": "^4.11.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.2.1",
