--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts": "^4.8.2",
     "@openzeppelin/contracts-upgradeable": "^4.8.2",
+    "@types/uuid": "^9.0.5",
     "@uma/core": "^2.56.0",
     "hardhat": "^2.18.0",
     "solidity-bytes-utils": "^0.8.0"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "ethers": "^5.7.2",
+    "uuid": "^9.0.1"
   }
 }
